--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 
 <body id="landingBody">
   <main class="landing" id="landing">
-    <div class="poster-wrapper" id="poster">
-      <!-- <img class="poster" src="assets/img/invest.png" /> -->
-    </div>
-    <h1>188.4 FM graphics & title</h1>
 
+    <!-- <h1>188.4 FM graphics & title</h1> -->
+
+    <img src="./assets/img/1884components-23.png" alt="" class="lockup" />
+    <img src="./assets/img/1884components-24.png" alt="" class="wave" />
+    <img src="./assets/img/1884components-25.png" alt="" class="tower" />
     <a href="./inner/twine.html">
       <button>
         <span>Start</span>
