--- a/memorial/accept.html
+++ b/memorial/accept.html
@@ -19,8 +19,8 @@
 
   <!-- our styles -->
 
-  <link rel="stylesheet" href="styles/generics.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="/styles/generics.css">
+  <link rel="stylesheet" href="/styles/main.css">
 
 
   <!-- tp scripts -->
@@ -30,7 +30,7 @@
 
 
 
-  <title>1884</title>
+  <title>Pre Record</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -38,22 +38,40 @@
 </head>
 
 <body id="landingBody">
-  <main class="landing" id="landing">
+  <main class="landing record" id="landing">
 
 
-    <img src="./assets/img/1884components-23.png" alt="" class="lockup" />
-    <!-- <img src="./assets/img/1884components-24.png" alt="" class="wave" /> -->
 
-    <img src="./assets/img/1884components-25.png" alt="" class="tower" />
-    <a href="./inner/index.html" class="landing-btn">
-      <button>
-        <span>Start</span>
-      </button>
-    </a>
+    <section class="webtext">
+      <h1>Memorial</h1>
+      <p>Welcome to the 1884 digital memorial.</p>
 
+      <p> A place where you can write your own history, in your own terms.</p>
+
+      <p> You can spend as long as you want in the memorial. You can listen to other people’s stories, or record your
+        own.</p>
+
+      <p>
+        By entering the memorial, you must accept the <a
+          href="https://afterlifeexperience.org/AfterLifeExperienceTermsConditions.pdf" target="_blank">terms and
+          conditions</a>.
+      </p>
+
+
+      <a href="./choice.html"><button>I accept</button></a>
+    </section>
   </main>
+  <footer>
+    <div class="nav-wrapper">
+      <div class="nav-item">
+        <a href="../../memorial/index.html"><button>Back</button></a>
+      </div>
+    </div>
+
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+  <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
 </body>
 
 </html>
