--- a/memorial/record.html
+++ b/memorial/record.html
@@ -19,8 +19,8 @@
 
   <!-- our styles -->
 
-  <link rel="stylesheet" href="styles/generics.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="/styles/generics.css">
+  <link rel="stylesheet" href="/styles/main.css">
 
 
   <!-- tp scripts -->
@@ -30,7 +30,7 @@
 
 
 
-  <title>1884</title>
+  <title>Memorial</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -38,22 +38,31 @@
 </head>
 
 <body id="landingBody">
-  <main class="landing" id="landing">
+  <main class="landing record" id="landing">
 
 
-    <img src="./assets/img/1884components-23.png" alt="" class="lockup" />
-    <!-- <img src="./assets/img/1884components-24.png" alt="" class="wave" /> -->
 
-    <img src="./assets/img/1884components-25.png" alt="" class="tower" />
-    <a href="./inner/index.html" class="landing-btn">
-      <button>
-        <span>Start</span>
-      </button>
-    </a>
+    <section>
+      <h1>Memorial - Record</h1>
+      <p> Please try to keep your recording to 30 sec or less.</p>
+
+
+
+      <iframe src="https://www.speakpipe.com/widget/inline/1ja4261if7bkgglz3ptjpxgt077v47h9" allow="microphone"
+        width="100%" height="200" frameborder="0"></iframe>
+
+
+      <br>
+
+      <br>
+      <a href="/thanks.html"><button>I'm done</button></a>
+    </section>
+
 
   </main>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+  <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
 </body>
 
 </html>
