--- a/thanks.html
+++ b/thanks.html
@@ -38,24 +38,40 @@
 </head>
 
 <body id="landingBody">
-  <main class="landing" id="landing">
-    <div class="poster-wrapper" id="poster">
-      <!-- <img class="poster" src="assets/img/invest.png" /> -->
+  <main class="landing record" id="landing">
+    <div class="main-container text">
+      <h1>Thank you</h1>
+
+      <p>Thank you for visiting the 188.4 FM experience. </p>
+
+      <p>If you enjoyed it, and think someone you know would enjoy it too, or learn something they didn’t know, then
+        please click on send a <a href="./postcard.html"><button>Postcard</button></a> </p>
+
+      <p>Or if you want to keep in touch with Coney, and find out more about our next projects, please sign up for our
+        <a href="https://coneyhq.org/sign-up-to-our-mailing-list/" target="_blank"><button>Newsletter</button></a> or
+        follow us on social media.
+      </p>
+      <div class="icon-container socials">
+        <a href="https://www.instagram.com/agencyofconey/" target="_blank">
+          <img src="/assets/img/socials/insta.png" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/coneyhq/" target="_blank">
+          <img src="/assets/img/socials/facebook.png" alt="facebook logo" /></a>
+        <a href="https://twitter.com/agencyofconey" alt="twitter logo" target="_blank">
+          <img src="/assets/img/socials/twitter.png" /></a>
+      </div>
     </div>
-    <h1>Thank you</h1>
-    <p>
-      <a href="#">More info about 1884 by Rhianna Ilube & Coney (link to Coney website)</a>
-      <br><br>
-      <a href="#">Sign up to Coney’s newsletter</a>
-      <br><br>
-      <a href="#">Follow Coney on socials</a>
-    </p>
-    <br><br>
-
-    <br><br>
-
 
   </main>
+
+
+  <footer>
+    <div class="nav-wrapper">
+      <div class="nav-item">
+        <a href="/index.html"><button>Start</button></a>
+      </div>
+    </div>
+
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 </body>
