--- a/memorial/index.html
+++ b/memorial/index.html
@@ -19,8 +19,8 @@
 
   <!-- our styles -->
 
-  <link rel="stylesheet" href="styles/generics.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="/styles/generics.css">
+  <link rel="stylesheet" href="/styles/main.css">
 
 
   <!-- tp scripts -->
@@ -30,7 +30,7 @@
 
 
 
-  <title>1884</title>
+  <title>Memorial Landing</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -38,22 +38,23 @@
 </head>
 
 <body id="landingBody">
-  <main class="landing" id="landing">
+  <main class="landing record" id="landing">
+    <main class="landing">
 
+      <img src="/assets/img/1884memorial-27.png" alt="" class="lockup" />
 
-    <img src="./assets/img/1884components-23.png" alt="" class="lockup" />
-    <!-- <img src="./assets/img/1884components-24.png" alt="" class="wave" /> -->
-
-    <img src="./assets/img/1884components-25.png" alt="" class="tower" />
-    <a href="./inner/index.html" class="landing-btn">
-      <button>
-        <span>Start</span>
-      </button>
-    </a>
+      <img src="/assets/img/1884components-25.png" alt="" class="tower" />
+      <br />
+      <div class="landing-btn">
+        <a href="./accept.html"><button>Enter</button></a>
+      </div>
+    </main>
 
   </main>
 
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+  <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
 </body>
 
 </html>
