--- a/postcard.html
+++ b/postcard.html
@@ -30,7 +30,7 @@
 
 
 
-  <title>Memorial</title>
+  <title>Postcard</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -42,24 +42,7 @@
     <div class="poster-wrapper" id="poster">
       <!-- <img class="poster" src="assets/img/invest.png" /> -->
     </div>
-    <h1>Memorial</h1>
-
-    <section>
-      <p> People can record voice notes (less than 1 min?), then post them as part of online memorial, and listen to
-        others.</p>
-      <p> Need to look into consent boxes</p>
-
-
-      <br><br>
-      <strong>This is for an old speakpipe!!</strong>
-      <br><br>
-      <iframe src="https://www.speakpipe.com/widget/inline/kp6xzmubni8enwhrhvqo1sx5cbst92iy" allow="microphone"
-        width="100%" height="200" frameborder="0"></iframe>
-      <br>
-
-      <br>
-      <a href="./thanks.html"><button>I'm done</button></a>
-    </section>
+    <h1>Postcard</h1>
 
 
   </main>
