--- a/memorial/accept.html
+++ b/memorial/accept.html
@@ -41,25 +41,27 @@
   <main class="landing record" id="landing">
 
 
+    <div class="main-container text">
 
-    <section class="webtext">
-      <h1>Memorial</h1>
-      <p>Welcome to the 1884 digital memorial.</p>
+      <section class="webtext">
+        <h1>Memorial</h1>
+        <p>Welcome to the 1884 digital memorial.</p>
 
-      <p> A place where you can write your own history, in your own terms.</p>
+        <p> A place where you can write your own history, in your own terms.</p>
 
-      <p> You can spend as long as you want in the memorial. You can listen to other people’s stories, or record your
-        own.</p>
+        <p> You can spend as long as you want in the memorial. You can listen to other people’s stories, or record your
+          own.</p>
 
-      <p>
-        By entering the memorial, you must accept the <a
-          href="https://afterlifeexperience.org/AfterLifeExperienceTermsConditions.pdf" target="_blank">terms and
-          conditions</a>.
-      </p>
+        <p>
+          By entering the memorial, you must accept the <a
+            href="https://afterlifeexperience.org/AfterLifeExperienceTermsConditions.pdf" target="_blank">terms and
+            conditions</a>.
+        </p>
 
 
-      <a href="./choice.html"><button>I accept</button></a>
-    </section>
+        <a href="./choice.html"><button>I accept</button></a>
+      </section>
+    </div>
   </main>
   <footer>
     <div class="nav-wrapper">
