--- a/memorial/choice.html
+++ b/memorial/choice.html
@@ -48,7 +48,8 @@
         <p> We recommend first to <a href="./prerecord.html"><button>Record</button></a> your own contribution to the
           memorial.</p>
 
-        <p> But if you prefer, you can skip this stage and <a href="./listen.html"><button>Listen</button></a> to the
+        <p> But if you prefer, you can skip this stage and <a href="../memorial/listen.html"><button>Listen</button></a>
+          to the
           stream of memories.</p>
 
 
