--- a/memorial/index.html
+++ b/memorial/index.html
@@ -41,7 +41,7 @@
   <main class="landing record" id="landing">
     <main class="landing">
 
-      <img src="/assets/img/1884memorial-27.png" alt="" class="lockup" />
+      <img src="/assets/img/1884memorial-27.png" alt="" class="lockup mem" />
 
       <img src="/assets/img/1884components-25.png" alt="" class="tower" />
       <br />
