--- a/memorial/prerecord.html
+++ b/memorial/prerecord.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <!-- our styles -->
 
@@ -38,10 +40,28 @@
 </head>
 
 <body id="landingBody">
-  <main class="landing record text" id="landing">
+  <header class="general">
+    <div class="dropdown" id="menu">
+      <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="/assets/img/menu.png">
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+        <h2 class="menu-title"> MENU </h2>
+        <h3 class="menu-item">
+          <a href="/games/index.html">Games</a>
+        </h3>
+        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+        <a href=""><button>Close Menu</button></a>
+        </section>
+      </ul>
+    </div>
+  </header>
+  <main class="text" id="landing">
     <div class="main-container text">
 
-      <section class="webtext">
+      <section class="">
         <!-- <h1>Memorial</h1>
         <p>We recommend is first to <a href="./record.html"><button>Record</button></a> your own contribution to the
           memorial.</p>
@@ -54,28 +74,34 @@
         <p>On the next page, you’ll be able to record your own reflections about 1884. </p>
         <p> Here’s some prompt questions you could answer:</p>
 
-        <p>What did the 1884 live show or digital experience make you feel or think about?</p>
+        <p class="provocation">What did the 1884 live show or digital experience make you feel or think about?</p>
 
-        <p>What are your reflections on the history of the 1884 Berlin Conference, and how it is remembered today?</p>
+        <p class="provocation">What are your reflections on the history of the 1884 Berlin Conference, and how it is
+          remembered today?</p>
 
         <p>But feel free to record whatever you feel like sharing.</p>
-
+        <a href="../../memorial/record.html"><button>I'm ready</button></a>
       </section>
 
     </div>
 
   </main>
-  <footer>
+  <footer class="flex-start">
     <div></div>
     <div class="nav-wrapper">
       <div class="nav-item">
-        <a href="../../memorial/record.html"><button>I'm ready</button></a>
+        <a href="javascript:history.back()"><button>Back</button></a>
       </div>
     </div>
-
+    <div></div>
   </footer>
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
   <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
