--- a/memorial/record.html
+++ b/memorial/record.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <!-- our styles -->
 
@@ -38,7 +40,25 @@
 </head>
 
 <body id="landingBody">
-  <main class="landing record" id="landing">
+  <header class="general">
+    <div class="dropdown" id="menu">
+      <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="/assets/img/menu.png">
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+        <h2 class="menu-title"> MENU </h2>
+        <h3 class="menu-item">
+          <a href="/games/index.html">Games</a>
+        </h3>
+        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+        <a href=""><button>Close Menu</button></a>
+        </section>
+      </ul>
+    </div>
+  </header>
+  <main class="record" id="landing">
 
 
 
@@ -55,14 +75,25 @@
       <br>
 
       <br>
-      <a href="/thanks.html"><button>I'm done</button></a>
+      <a href="/memorial/listen.html"><button>I'm done</button></a>
     </section>
 
 
   </main>
+  <footer>
+    <div class="nav-wrapper">
+      <div class="nav-item">
+        <a href="../../memorial/prerecord.html"><button>Back</button></a>
+      </div>
+    </div>
+
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
   <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
