--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
 </head>
 
-<body id="landingBody">
+<body id="landingBody" class="peach">
   <main class="landing" id="landing">
 
 
@@ -45,7 +45,7 @@
     <!-- <img src="./assets/img/1884components-24.png" alt="" class="wave" /> -->
 
     <img src="./assets/img/1884components-25.png" alt="" class="tower" />
-    <a href="./inner/index.html" class="landing-btn">
+    <a href="./games/index.html" class="landing-btn">
       <button>
         <span>Start</span>
       </button>
