--- a/404.html
+++ b/404.html
@@ -31,8 +31,23 @@
 </head>
 
 <body>
-  <header>
-
+  <header class="general">
+    <div class="dropdown" id="menu">
+      <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <img src="/assets/img/menu.png">
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+        <h2 class="menu-title"> MENU </h2>
+        <h3 class="menu-item">
+          <a href="/games/index.html">Games</a>
+        </h3>
+        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+        <a href=""><button>Close Menu</button></a>
+        </section>
+      </ul>
+    </div>
   </header>
   <main>
     <section>
@@ -49,6 +64,9 @@
   <footer class="footer-outer">
 
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
