--- a/making.html
+++ b/making.html
@@ -31,7 +31,7 @@
 
 
 
-  <title>Memorial</title>
+  <title>Creative Team</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -59,30 +59,11 @@
   </header>
   <main class="" id="landing">
     <div class="main-container text">
-      <h1>Thank you</h1>
+      <h1>Creative Team</h1>
 
-      <p>Thank you for visiting the 188.4FM experience. </p>
-
-      <p>If you enjoyed it, and think someone you know would enjoy it too, or learn something they didn’t know, then
-        please click on send a <a href="./postcard.html"><button>Postcard</button></a> </p>
-      <p>And if you want to find out more about the making of the show behind 1884, click <a
-          href="./making.html"><button>here</button></a> </p>
+      <p>a video of Rhianna & Mareika talking about it</p>
 
 
-      <p>Or if you want to keep in touch with Coney, and find out more about our next projects, please sign up for our
-        <a href="https://coneyhq.org/sign-up-to-our-mailing-list/" target="_blank"><button>Newsletter</button></a> or
-        follow us on social media.
-      </p>
-      <br /><br />
-      <div class="icon-container socials">
-        <a href="https://www.instagram.com/agencyofconey/" target="_blank">
-          <img src="/assets/img/socials/insta.png" alt="instagram icon"></a>
-        <a href="https://www.facebook.com/coneyhq/" target="_blank">
-          <img src="/assets/img/socials/facebook.png" alt="facebook logo" /></a>
-        <a href="https://twitter.com/agencyofconey" alt="twitter logo" target="_blank">
-          <img src="/assets/img/socials/twitter.png" /></a>
-      </div>
-    </div>
 
   </main>
 
@@ -96,6 +77,7 @@
     </div>
     <div></div>
   </footer>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
