added two speakpipe

--- a/memorial/record-a.html
+++ b/memorial/record-a.html
@@ -32,7 +32,7 @@
 
 
 
-  <title>Pre Record</title>
+  <title>Memorial - Record - Group A</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -58,49 +58,36 @@
       </ul>
     </div>
   </header>
-  <main class="text" id="landing">
-    <div class="main-container text">
-
-      <!-- <h1>Memorial</h1>
-        <p>We recommend is first to <a href="./record.html"><button>Record</button></a> your own contribution to the
-          memorial.</p>
-  
-        <p> But if you prefer, you can skip this stage and <a href="./listen.html"><button>Listen</button></a> to the
-          stream of memories.</p> -->
-
-      <h1>Memorial - Record</h1>
-
-      <p>On the next page, you’ll be able to record your own reflections about 1884. </p>
-      <p> Here’s some prompt questions you could answer:</p>
-
-      <p class="provocation">What did the 1884 live show or digital experience make you feel or think about?</p>
-
-      <p class="provocation">What are your reflections on the history of the 1884 Berlin Conference, and how it is
-        remembered today?</p>
-
-      <p>But feel free to record whatever you feel like sharing.</p>
-
-      <p>Have you attended the 1884 live show?</p>
-      <a href="../../memorial/record-a.html"><button>I have seen the show</button></a>
-      <br /><br />
-      <a href="../../memorial/record-b.html"><button>I haven't seen the show</button></a>
-      </section>
+  <main class="record" id="landing">
 
 
 
-    </div>
+    <section>
+      <h1>Memorial - Record - Group A</h1>
+      <p> Please try to keep your recording to 30 sec or less.</p>
+
+
+
+      <iframe src="https://www.speakpipe.com/widget/inline/f8yjj8pwd2ezkb1xnmrh1da67b8o9bbb" allow="microphone"
+        width="100%" height="200" frameborder="0"></iframe>
+
+
+      <br>
+
+      <br>
+      <a href="/memorial/listen.html"><button>I'm done</button></a>
+    </section>
+
 
   </main>
-  <footer class="flex-start">
-    <div></div>
+  <footer>
     <div class="nav-wrapper">
       <div class="nav-item">
-        <a href="javascript:history.back()"><button>Back</button></a>
+        <a href="../../memorial/prerecord.html"><button>Back</button></a>
       </div>
     </div>
-    <div></div>
-  </footer>
 
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
   <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
