--- a/memorial/record-b.html
+++ b/memorial/record-b.html
@@ -32,7 +32,7 @@
 
 
 
-  <title>Memorial</title>
+  <title>Memorial - Record - Group B</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -63,14 +63,12 @@
 
 
     <section>
-      <h1>Memorial - Record</h1>
+      <h1>Memorial - Record - Group B</h1>
       <p> Please try to keep your recording to 30 sec or less.</p>
 
 
-
-      <iframe src="https://www.speakpipe.com/widget/inline/1ja4261if7bkgglz3ptjpxgt077v47h9" allow="microphone"
+      <iframe src="https://www.speakpipe.com/widget/inline/8qhwa06gj1vcjhzpxd1xceolga4tljlk" allow="microphone"
         width="100%" height="200" frameborder="0"></iframe>
-
 
       <br>
 
