--- a/404.html
+++ b/404.html
@@ -15,8 +15,8 @@
 
 
   <!-- our styles -->
-  <link rel="stylesheet" href="/styles/generics.css">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="styles/generics.css">
+  <link rel="stylesheet" href="styles/main.css">
 
 
 
@@ -52,7 +52,7 @@
   <main>
     <section>
       <h3>Oh dear...</h3>
-      <p> That page doesn't seem to exist. Perhaps you'd like to go back <a href="./index.html"
+      <p> That page doesn't seem to exist. Perhaps you'd like to go back <a href="index.html"
           class="highlighted">Home</a>?</p>
 
     </section>
