--- a/memorial/prerecord.html
+++ b/memorial/prerecord.html
@@ -21,8 +21,8 @@
 
   <!-- our styles -->
 
-  <link rel="stylesheet" href="/styles/generics.css">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="../styles/generics.css">
+  <link rel="stylesheet" href="../styles/main.css">
 
 
   <!-- tp scripts -->
@@ -44,15 +44,15 @@
     <div class="dropdown" id="menu">
       <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
         data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="/assets/img/menu.png">
+        <img src="../assets/img/menu.png">
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
         <h3 class="menu-item">
-          <a href="/games/index.html">Games</a>
+          <a href="../games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
-        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="../memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
@@ -68,7 +68,7 @@
         <p> But if you prefer, you can skip this stage and <a href="./listen.html"><button>Listen</button></a> to the
           stream of memories.</p> -->
 
-      <h1>Memorial - Record</h1>
+      <h1>1884 Memorial <br />Record</h1>
 
       <p>On the next page, you’ll be able to record your own reflections about 1884. </p>
       <p> Here’s some prompt questions you could answer:</p>
@@ -81,9 +81,9 @@
       <p>But feel free to record whatever you feel like sharing.</p>
 
       <p>Have you attended the 1884 live show?</p>
-      <a href="../../memorial/record-a.html"><button>I have seen the show</button></a>
+      <a href="record-a.html"><button>I have seen the show</button></a>
       <br /><br />
-      <a href="../../memorial/record-b.html"><button>I haven't seen the show</button></a>
+      <a href="record-b.html"><button>I haven't seen the show</button></a>
       </section>
 
 
