--- a/memorial/record-a.html
+++ b/memorial/record-a.html
@@ -21,8 +21,8 @@
 
   <!-- our styles -->
 
-  <link rel="stylesheet" href="/styles/generics.css">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="../styles/generics.css">
+  <link rel="stylesheet" href="../styles/main.css">
 
 
   <!-- tp scripts -->
@@ -44,15 +44,15 @@
     <div class="dropdown" id="menu">
       <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
         data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="/assets/img/menu.png">
+        <img src="../assets/img/menu.png">
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
         <h3 class="menu-item">
-          <a href="/games/index.html">Games</a>
+          <a href="../games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
-        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="../memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
@@ -63,7 +63,7 @@
 
 
     <section>
-      <h1>Memorial - Record - Group A</h1>
+      <h1>1884 Memorial </br> Record</h1>
       <p> Please try to keep your recording to 30 sec or less.</p>
 
 
@@ -75,7 +75,7 @@
       <br>
 
       <br>
-      <a href="/memorial/listen.html"><button>I'm done</button></a>
+      <a href="listen.html"><button>I'm done</button></a>
     </section>
 
 
@@ -83,7 +83,7 @@
   <footer>
     <div class="nav-wrapper">
       <div class="nav-item">
-        <a href="../../memorial/prerecord.html"><button>Back</button></a>
+        <a href="prerecord.html"><button>Back</button></a>
       </div>
     </div>
 
