--- a/postcard.html
+++ b/postcard.html
@@ -43,7 +43,7 @@
       <!-- <img class="poster" src="assets/img/invest.png" /> -->
     </div>
     <h1>Postcard</h1>
-
+    <p>TBC</p>
 
   </main>
 
