--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <main class="landing" id="landing">
 
 
-    <img src="./assets/img/1884components-23.png" alt="" class="lockup" />
+    <img src="assets/img/1884components-23.png" alt="" class="lockup" />
     <!-- <img src="./assets/img/1884components-24.png" alt="" class="wave" /> -->
 
-    <img src="./assets/img/1884components-25.png" alt="" class="tower" />
-    <a href="./games/index.html" class="landing-btn">
+    <img src="assets/img/1884components-25.png" alt="" class="tower" />
+    <a href="games/index.html" class="landing-btn">
       <button>
         <span>Start</span>
       </button>
