--- a/memorial/accept.html
+++ b/memorial/accept.html
@@ -21,15 +21,15 @@
 
   <!-- our styles -->
 
-  <link rel="stylesheet" href="/styles/generics.css">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="../styles/generics.css">
+  <link rel="stylesheet" href="../styles/main.css">
 
 
   <!-- tp scripts -->
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 
   <!-- our scripts -->
-
+  <script src="../scripts/main.js"></script>
 
 
   <title>Pre Record</title>
@@ -44,15 +44,15 @@
     <div class="dropdown" id="menu">
       <button class="btn btn-secondary dropdown-toggle logo-container" type="button" id="dropdownMenu2"
         data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="/assets/img/menu.png">
+        <img src="../assets/img/menu.png">
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
         <h2 class="menu-title"> MENU </h2>
         <h3 class="menu-item">
-          <a href="/games/index.html">Games</a>
+          <a href="../games/index.html">Games</a>
         </h3>
-        <h3 class="menu-item"><a href="/memorial/accept.html">Memorial</a></h3>
-        <h3 class="menu-item"><a href="../../history/index.html">History</a></h3>
+        <h3 class="menu-item"><a href="../memorial/accept.html">Memorial</a></h3>
+        <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
         </section>
       </ul>
@@ -64,23 +64,29 @@
     <div class="main-container text">
 
       <section class="">
-        <h1>Memorial</h1>
-        <p>Welcome to the 1884 digital memorial.</p>
+        <h1>1884 Memorial</h1>
+        <br />
+        <p class="hidden" id="paragraph1">Welcome to the 1884 digital memorial.</p>
 
-        <p> A place where you can write your own history, in your own terms.</p>
+        <p class="hidden" id="paragraph2"> A place where you can write your own history, in your own terms.</p>
 
-        <p> You can spend as long as you want in the memorial. You can listen to other people’s stories, or record your
+        <p class="hidden" id="paragraph3"> You can spend as long as you want in the memorial. You can listen to other
+          people’s stories,
+          or record your
           own.</p>
 
-        <p>
+        <p class="hidden" id="paragraph4">
           By entering the memorial, you must accept the <a
             href="https://afterlifeexperience.org/AfterLifeExperienceTermsConditions.pdf" target="_blank"
             class="highlighted">terms and
             conditions</a>.
+          <br />
+          <br />
+          <a href="choice.html"><button>I accept</button></a>
         </p>
 
 
-        <a href="./choice.html"><button>I accept</button></a>
+
       </section>
     </div>
   </main>
@@ -94,11 +100,12 @@
     <div></div>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
   <script async src="https://www.speakpipe.com/widget/loader.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
