--- a/memorial/prerecord.html
+++ b/memorial/prerecord.html
@@ -7,8 +7,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="">
-  <meta name="description" content="">
+  <!-- Primary Meta Tags -->
+  <title>1884 Experience | Pre-Record | Coney</title>
+  <meta name="title" content="1884 Experience | Coney" />
+  <meta name="description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:title" content="1884 Experience | Coney" />
+  <meta property="og:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:title" content="1884 Experience | Coney" />
+  <meta property="twitter:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 
 
 
@@ -30,9 +51,6 @@
 
   <!-- our scripts -->
 
-
-
-  <title>Pre Record</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -54,19 +72,14 @@
         <h3 class="menu-item"><a href="../memorial/accept.html">Memorial</a></h3>
         <h3 class="menu-item"><a href="../history/index.html">History</a></h3>
         <a href=""><button>Close Menu</button></a>
-        </section>
+
       </ul>
     </div>
   </header>
   <main class="text" id="landing">
     <div class="main-container text">
 
-      <!-- <h1>Memorial</h1>
-        <p>We recommend is first to <a href="./record.html"><button>Record</button></a> your own contribution to the
-          memorial.</p>
-  
-        <p> But if you prefer, you can skip this stage and <a href="./listen.html"><button>Listen</button></a> to the
-          stream of memories.</p> -->
+
 
       <h1>1884 Memorial <br />Record</h1>
 
@@ -84,7 +97,7 @@
       <a href="record-a.html"><button>I have seen the show</button></a>
       <br /><br />
       <a href="record-b.html"><button>I haven't seen the show</button></a>
-      </section>
+
 
 
 
