--- a/memorial/accept.html
+++ b/memorial/accept.html
@@ -7,8 +7,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="">
-  <meta name="description" content="">
+  <!-- Primary Meta Tags -->
+  <title>1884 Experience | Memorial | Coney</title>
+  <meta name="title" content="1884 Experience | Coney" />
+  <meta name="description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://metatags.io/" />
+  <meta property="og:title" content="1884 Experience | Coney" />
+  <meta property="og:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://metatags.io/" />
+  <meta property="twitter:title" content="1884 Experience | Coney" />
+  <meta property="twitter:description" content="Discover the myths about the 1884 Berlin Conference, and uncover the history behind it.
+" />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 
 
 
@@ -32,7 +53,7 @@
   <script src="../scripts/main.js"></script>
 
 
-  <title>Pre Record</title>
+
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
