--- a/thanks.html
+++ b/thanks.html
@@ -86,15 +86,18 @@
       <p class="hidden" id="paragraph2">If you want to find out more about the making of the show behind 1884, click <a
           href="making.html"><button>here</button></a> </p>
 
+      <p class="hidden" id="paragraph3">If you enjoyed this experience, why not share on <a
+          href="whatsapp://send?text=Have you heard about 1884?" data-action="share/whatsapp/share" target="_blank">
+          <button>WhatsApp</button> </a>? </p>
 
-      <p class="hidden" id="paragraph3">If you want to find out more about next Coney projects, please sign up for our
+
+      <p class="hidden" id="paragraph4">If you want to find out more about next Coney projects, please sign up for our
         <a href="https://coneyhq.org/sign-up-to-our-mailing-list/" target="_blank"><button>Newsletter</button></a> or
         follow us on social media.
       </p>
-      <a href="whatsapp://send?text=This is WhatsApp sharing example using link" data-action="share/whatsapp/share"
-        target="_blank"> Share to WhatsApp </a>
+
       <br />
-      <div id="paragraph4" class="icon-container socials hidden">
+      <div id="paragraph5" class="icon-container socials hidden">
         <a href="https://www.instagram.com/agencyofconey/" target="_blank">
           <img src="assets/img/socials/insta.png" alt="instagram icon"></a>
         <a href="https://www.facebook.com/coneyhq/" target="_blank">
