game intro on games

--- a/games/index.html
+++ b/games/index.html
@@ -284,7 +284,7 @@ setup.backThirty = () => {
   &lt;/div&gt;
   &lt;h2 class=&quot;menu-title&quot;&gt; MENU &lt;/h2&gt;
 &lt;h3 class=&quot;menu-item&quot;&gt;&lt;&lt;link &quot;Games&quot;&gt;&gt;
-&lt;&lt;goto &quot;intro&quot;&gt;&gt;
+&lt;&lt;goto &quot;game-intro&quot;&gt;&gt;
     &lt;&lt;/link&gt;&gt;&lt;/h3&gt;
     &lt;ul&gt;
     &lt;li&gt; &lt;&lt;link &quot;Reset &amp; Start again&quot;&gt;&gt;
