--- a/thanks.html
+++ b/thanks.html
@@ -86,9 +86,15 @@
       <p class="hidden" id="paragraph2">If you want to find out more about the making of the show behind 1884, click <a
           href="making.html"><button>here</button></a> </p>
 
-      <p class="hidden" id="paragraph3">If you enjoyed this experience, why not share on <a
-          href="whatsapp://send?text=Have you heard about 1884?" data-action="share/whatsapp/share" target="_blank">
-          <button>WhatsApp</button> </a>? </p>
+      <p class="hidden" id="paragraph3">if you enjoyed it and think someone else would enjoy it too, why not share on <a
+          href="whatsapp://send?text=Have you heard about 1884? https://youhavefoundconey.net/1884FM"
+          data-action="share/whatsapp/share" target="_blank">
+          <button>WhatsApp</button> </a> or <a class="twitter-share-button"
+          href="https://twitter.com/intent/tweet?text=Have%20you%20heard%20about%201884%3F%20https%3A%2F%2Fyouhavefoundconey.net%2F1884FM"
+          target="_blank">
+          <button>Twitter</button>
+        </a>
+        ? </p>
 
 
       <p class="hidden" id="paragraph4">If you want to find out more about next Coney projects, please sign up for our
